Fix dark mode problem

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,15 @@ html{
 body{
   font-family: "Poppins", sans-serif;
 }
+
+html {
+  color-scheme: light;
+}
+
+@media (prefers-color-scheme: dark) {
+  /* Override dark mode settings */
+  html {
+    background-color: white;
+    color: black;
+  }
+}
